--- a/server/.env
+++ b/server/.env
@@ -19,4 +19,4 @@ CLOUDINARY_API_SECRET = 'iG5XXNpLB_ce8GQPnpndaEpcotg'
 RAZORPAY_KEY_ID = 'rzp_test_O2cAmMRyA8nqFX'
 RAZORPAY_KEY_SECRET = '1uC1gTkPLFTrJ5RYULXvdcNO'
 
-RAZORPAY_WEBHOOK_SECRET=''
+RAZORPAY_WEBHOOK_SECRET='greenbasket-razorpay-secret-webhook-key'
